preventing horizontal scroll in discography

--- a/src/sass/views/_home.sass
+++ b/src/sass/views/_home.sass
@@ -11,6 +11,7 @@
     position: relative
     height: 100%
     margin: 0 0 20px 0
+    overflow: hidden
 
     .playlist-container, .playlist
       position: absolute
